# protobuf-vs-lttng

./: CMakeLists.txt  lttng_tracepoints.cpp  lttng_tracepoints.h  main_lttng.cpp  main_protobuf.cpp  main_protobuf_server.cpp  run-benchmarks.sh  run-protobuf-server.sh  utils.cpp  utils.h
protos/: trace_service.proto
